--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Bayon&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
+
+@font-face {
+  font-family: helveticaNeue;
+  src: url(./assets/Helvetica-Neue-Font/HelveticaNeueCyr-Light.ttf);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #000000;
+  color: #ffffff;
+  /* font-family: 'Bayon', sans-serif; */
+  font-family: "Roboto", sans-serif;
+}
+
+/* START: General styles */
+.max-width {
+  @apply max-w-[1440px] mx-auto sm:px-8 px-3;
+}
+
+.helveticaFM {
+  font-family: helveticaNeue, sans-serif !important;
+}
+
+.bgGradient {
+  background: linear-gradient(360deg, #000000 44%, #1a1a1a 100%);
+}
