--- a/src/input.css
+++ b/src/input.css
@@ -52,7 +52,6 @@ body {
   flex-basis: auto;
 }
 
-
 .swiper--blog__wrapper2 {
   display: flex;
   transition-timing-function: linear !important;
@@ -164,3 +163,18 @@ body {
   background-image: radial-gradient(at top center, #000000 39%, #535353 100%);
 }
 
+.zoom-in-zoom-out:hover {
+  animation: zoom-in-zoom-out 0.8s ease-out infinite;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.2, 1.2);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
