nav items link added

--- a/src/input.css
+++ b/src/input.css
@@ -16,6 +16,9 @@
   color: #ffffff;
   font-family: "Roboto", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   background: #000000;
 }
