--- a/src/output.css
+++ b/src/output.css
@@ -616,6 +616,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5{
+  margin-top: 1.25rem;
+}
+
 .mt-7{
   margin-top: 1.75rem;
 }
@@ -624,12 +628,24 @@ video {
   margin-top: 15px;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
+.ml-10{
+  margin-left: 2.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
+.ml-12{
+  margin-left: 3rem;
+}
+
+.ml-20{
+  margin-left: 5rem;
+}
+
+.ml-14{
+  margin-left: 3.5rem;
+}
+
+.ml-24{
+  margin-left: 6rem;
 }
 
 .block{
@@ -688,10 +704,6 @@ video {
   height: 100vh;
 }
 
-.h-12{
-  height: 3rem;
-}
-
 .max-h-screen{
   max-height: 100vh;
 }
@@ -728,6 +740,10 @@ video {
   max-width: 960px;
 }
 
+.max-w-lg{
+  max-width: 32rem;
+}
+
 .max-w-md{
   max-width: 28rem;
 }
@@ -736,16 +752,12 @@ video {
   max-width: 24rem;
 }
 
-.max-w-xs{
-  max-width: 20rem;
-}
-
-.max-w-lg{
-  max-width: 32rem;
-}
-
 .max-w-xl{
   max-width: 36rem;
+}
+
+.max-w-xs{
+  max-width: 20rem;
 }
 
 .shrink-0{
@@ -963,6 +975,11 @@ video {
 .py-\[6px\]{
   padding-top: 6px;
   padding-bottom: 6px;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pb-\[7px\]{
@@ -1348,6 +1365,19 @@ body {
 }
 
 @media (min-width: 640px){
+  .sm\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .sm\:ml-14{
+    margin-left: 3.5rem;
+  }
+
+  .sm\:ml-24{
+    margin-left: 6rem;
+  }
+
   .sm\:h-full{
     height: 100%;
   }
@@ -1380,6 +1410,14 @@ body {
 }
 
 @media (min-width: 768px){
+  .md\:ml-14{
+    margin-left: 3.5rem;
+  }
+
+  .md\:ml-24{
+    margin-left: 6rem;
+  }
+
   .md\:h-auto{
     height: auto;
   }
