--- a/src/output.css
+++ b/src/output.css
@@ -648,6 +648,10 @@ video {
   margin-left: 6rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -704,8 +708,45 @@ video {
   height: 100vh;
 }
 
+.h-\[500px\]{
+  height: 500px;
+}
+
+.h-\[600px\]{
+  height: 600px;
+}
+
+.h-\[800px\]{
+  height: 800px;
+}
+
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-screen{
   max-height: 100vh;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
+.min-h-full{
+  min-height: 100%;
+}
+
+.min-h-\[500px\]{
+  min-height: 500px;
+}
+
+.min-h-\[600px\]{
+  min-height: 600px;
+}
+
+.min-h-\[550px\]{
+  min-height: 550px;
 }
 
 .w-6{
@@ -982,6 +1023,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pb-\[7px\]{
   padding-bottom: 7px;
 }
@@ -1060,6 +1106,19 @@ video {
   line-height: 1rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-\[42px\]{
+  font-size: 42px;
+}
+
+.text-\[40px\]{
+  font-size: 40px;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1120,6 +1179,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[42x\]{
+  color: 42x;
 }
 
 .shadow{
@@ -1396,6 +1459,10 @@ body {
 
   .sm\:flex-row{
     flex-direction: row;
+  }
+
+  .sm\:text-left{
+    text-align: left;
   }
 
   .sm\:text-2xl{
